new 'Save Layout' button, sends positions to kernel

--- a/self-contained-notebooks/simple/simple.ipynb
+++ b/self-contained-notebooks/simple/simple.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -53,8 +53,13 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 90,
    "metadata": {
     "collapsed": true
    },
@@ -170,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 91,
    "metadata": {
     "collapsed": true
    },
@@ -260,6 +265,10 @@
     "      self.msgFromKernel = json.dumps({\"cmd\": \"layout\", \"status\": \"request\", \"callback\": \"\", \"payload\": name});\n",
     "        \n",
     "        \n",
+    "    def getPositions(self):\n",
+    "      self._resetMessage();\n",
+    "      self.msgFromKernel = json.dumps({\"cmd\": \"getPositions\", \"status\": \"request\", \"callback\": \"\", \"payload\": \"\"});\n",
+    "        \n",
     "    def clearSelection(self):\n",
     "      self._resetMessage();\n",
     "      self. msgFromKernel = json.dumps({\"cmd\": \"clearSelection\", \"status\": \"request\",\n",
@@ -310,28 +319,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<style>\n",
-       "    div#notebook-container    { width: 95%; }\n",
-       "    div#menubar-container     { width: 65%; }\n",
-       "    div#maintoolbar-container { width: 99%; }\n",
-       "</style>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
     "display(HTML(data=\"\"\"\n",
     "<style>\n",
@@ -344,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -400,6 +389,19 @@
        "               cyWidget.cy.edges().unselect();\n",
        "               });\n",
        "            toolbarDiv.append(clearButton);\n",
+       "            var saveLayoutButton = $(\"<button>Save Layout</button>\").click(function(){\n",
+       "               var positions = cy.nodes().map(function(n){\n",
+       "                     return({id: n.id(), name: n.data(\"name\"), x: n.position().x, y: n.position().y})});\n",
+       "               var jsonString = JSON.stringify({cmd: \"updatePositions\",\n",
+       "                                                status: \"request\",\n",
+       "                                                callback: \"\",\n",
+       "                                                payload: positions});\n",
+       "               console.log(jsonString);\n",
+       "               cyWidget.model.set(\"msgFromBrowser\", jsonString);\n",
+       "               console.log(\"    after setting 'msgFromBrowser\");\n",
+       "                  cyWidget.touch();\n",
+       "                });\n",
+       "            toolbarDiv.append(saveLayoutButton);\n",
        "            $(window).resize(this.resizeHandler);\n",
        "            return(outerDiv);\n",
        "           },\n",
@@ -645,6 +647,18 @@
        "              case 'clearSelection':\n",
        "                 this.cy.nodes().unselect();\n",
        "                 break;\n",
+       "              case 'getPositions':\n",
+       "                 var positions = cy.nodes().map(function(n){\n",
+       "                     return({id: n.id(), name: n.data(\"name\"), x: n.position().x, y: n.position().y})});\n",
+       "                 var jsonString = JSON.stringify({cmd: \"updatePositions\",\n",
+       "                                                  status: \"request\",\n",
+       "                                                  callback: \"\",\n",
+       "                                                  payload: positions});\n",
+       "                  console.log(jsonString);\n",
+       "                  this.model.set(\"msgFromBrowser\", jsonString);\n",
+       "                  console.log(\"    after setting 'msgFromBrowser\");\n",
+       "                  this.touch();\n",
+       "                  break;\n",
        "            default:\n",
        "               console.log(\"unrecognized msg.cmd: \" + msg.cmd);\n",
        "             } // switch\n",
@@ -730,6 +744,19 @@
     "               cyWidget.cy.edges().unselect();\n",
     "               });\n",
     "            toolbarDiv.append(clearButton);\n",
+    "            var saveLayoutButton = $(\"<button>Save Layout</button>\").click(function(){\n",
+    "               var positions = cy.nodes().map(function(n){\n",
+    "                     return({id: n.id(), name: n.data(\"name\"), x: n.position().x, y: n.position().y})});\n",
+    "               var jsonString = JSON.stringify({cmd: \"updatePositions\",\n",
+    "                                                status: \"request\",\n",
+    "                                                callback: \"\",\n",
+    "                                                payload: positions});\n",
+    "               console.log(jsonString);\n",
+    "               cyWidget.model.set(\"msgFromBrowser\", jsonString);\n",
+    "               console.log(\"    after setting 'msgFromBrowser\");\n",
+    "                  cyWidget.touch();\n",
+    "                });\n",
+    "            toolbarDiv.append(saveLayoutButton);\n",
     "            $(window).resize(this.resizeHandler);\n",
     "            return(outerDiv);\n",
     "           },\n",
@@ -975,6 +1002,18 @@
     "              case 'clearSelection':\n",
     "                 this.cy.nodes().unselect();\n",
     "                 break;\n",
+    "              case 'getPositions':\n",
+    "                 var positions = cy.nodes().map(function(n){\n",
+    "                     return({id: n.id(), name: n.data(\"name\"), x: n.position().x, y: n.position().y})});\n",
+    "                 var jsonString = JSON.stringify({cmd: \"updatePositions\",\n",
+    "                                                  status: \"request\",\n",
+    "                                                  callback: \"\",\n",
+    "                                                  payload: positions});\n",
+    "                  console.log(jsonString);\n",
+    "                  this.model.set(\"msgFromBrowser\", jsonString);\n",
+    "                  console.log(\"    after setting 'msgFromBrowser\");\n",
+    "                  this.touch();\n",
+    "                  break;\n",
     "            default:\n",
     "               console.log(\"unrecognized msg.cmd: \" + msg.cmd);\n",
     "             } // switch\n",
@@ -1003,13 +1042,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0fffe8eed61a4cd58529d5b6b3749359"
+       "model_id": "19d81fc8fb174489ad179c5027fff02e"
       }
      },
      "metadata": {},
@@ -1023,18 +1062,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 147,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "cy.setHeight(800)"
+    "cy.getPositions()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"cmd\":\"updatePositions\",\"status\":\"request\",\"callback\":\"\",\"payload\":[{\"id\":\"0\",\"name\":\"R1\",\"x\":41.58578690291919,\"y\":278.50293346558607},{\"id\":\"1\",\"name\":\"R2\",\"x\":263.0811911482971,\"y\":280.52984650260476},{\"id\":\"2\",\"name\":\"R3\",\"x\":-175.58097721935027,\"y\":217.56043863617637},{\"id\":\"3\",\"name\":\"R4\",\"x\":68.36201345095074,\"y\":-305.295763487262},{\"id\":\"4\",\"name\":\"R5\",\"x\":266.40165668756185,\"y\":-267.7390423181889},{\"id\":\"5\",\"name\":\"a\",\"x\":152.22048187909908,\"y\":284.33690578499704},{\"id\":\"6\",\"name\":\"b\",\"x\":30.67992619454842,\"y\":384.5516364056541},{\"id\":\"7\",\"name\":\"c\",\"x\":-66.22077693268159,\"y\":250.50760752024468},{\"id\":\"8\",\"name\":\"d\",\"x\":296.76903762249424,\"y\":177.40165619206755},{\"id\":\"9\",\"name\":\"e\",\"x\":354.857632600582,\"y\":333.99007083195374},{\"id\":\"10\",\"name\":\"f\",\"x\":-192.01339551629476,\"y\":323.7187292740306},{\"id\":\"11\",\"name\":\"g1\",\"x\":62.752170730123545,\"y\":177.33259141287},{\"id\":\"12\",\"name\":\"g2\",\"x\":366.065562998999,\"y\":236.21019607244332},{\"id\":\"13\",\"name\":\"g3\",\"x\":272.72913936587463,\"y\":387.98913769582754},{\"id\":\"14\",\"name\":\"g4\",\"x\":-154.6057437231133,\"y\":114.46010198646239},{\"id\":\"15\",\"name\":\"g5\",\"x\":-237.87718489878748,\"y\":120.40470889371137},{\"id\":\"16\",\"name\":\"g6\",\"x\":106.9880586979026,\"y\":-394.75128646024996},{\"id\":\"17\",\"name\":\"h\",\"x\":-283.8118091341129,\"y\":191.29928110713635},{\"id\":\"18\",\"name\":\"i\",\"x\":-264.1672710286218,\"y\":279.23884588923903},{\"id\":\"19\",\"name\":\"orphan1\",\"x\":530.5718855460549,\"y\":-36.95686160024614},{\"id\":\"20\",\"name\":\"orphan2\",\"x\":-350.5053315784919,\"y\":-187.89780378508738},{\"id\":\"21\",\"name\":\"w\",\"x\":53.90602141235733,\"y\":-209.77998667191707},{\"id\":\"22\",\"name\":\"x\",\"x\":-37.368138854608404,\"y\":-278.51496455003365},{\"id\":\"23\",\"name\":\"y\",\"x\":-9.332767555360839,\"y\":-372.9608325769846},{\"id\":\"24\",\"name\":\"z\",\"x\":172.36181570241638,\"y\":-283.26275753630534},{\"id\":\"25\",\"name\":\"z1\",\"x\":349.6520080671391,\"y\":-225.14219587153838}]}'"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cy.msgFromBrowser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cy.msg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# cy.setHeight(800)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
    "metadata": {
     "collapsed": true
    },
@@ -1057,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 140,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -1081,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 141,
    "metadata": {
     "collapsed": true
    },
@@ -1099,47 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "g.es()[0].target"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<igraph.Graph at 0x1069f5d68>"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "g"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 142,
    "metadata": {
     "collapsed": true
    },
@@ -1151,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 143,
    "metadata": {
     "collapsed": true
    },
@@ -1162,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 144,
    "metadata": {
     "collapsed": true
    },
@@ -1174,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 145,
    "metadata": {
     "collapsed": true
    },
@@ -1191,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 70,
    "metadata": {
     "collapsed": true
    },
@@ -1206,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 71,
    "metadata": {
     "collapsed": true
    },
@@ -1222,16 +1263,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['R3']"
+       "[]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1242,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 73,
    "metadata": {
     "collapsed": true
    },
@@ -1253,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1321,7 +1362,7 @@
        "R5    563    801    234"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1334,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 75,
    "metadata": {
     "collapsed": true
    },
@@ -1346,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1355,7 +1396,7 @@
        "[477, 44, 799, 368, 563]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1367,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 77,
    "metadata": {
     "collapsed": true
    },
@@ -1378,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1566,7 +1607,7 @@
        "15     R5     z1  produces    759    218    600"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1578,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 79,
    "metadata": {
     "collapsed": true
    },
@@ -1592,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 80,
    "metadata": {
     "collapsed": true
    },
@@ -1603,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 81,
    "metadata": {
     "collapsed": true
    },
@@ -1614,16 +1655,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "['R3', 'i']"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1634,7 +1675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 83,
    "metadata": {
     "collapsed": true
    },
@@ -1645,7 +1686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1654,7 +1695,7 @@
        "26"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1665,16 +1706,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "igraph.Vertex(<igraph.Graph object at 0x104b42318>, 1, {'name': 'R2', 'type': 'reaction'})"
+       "igraph.Vertex(<igraph.Graph object at 0x1069f5e58>, 1, {'name': 'R2', 'type': 'reaction'})"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1685,7 +1726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1694,7 +1735,7 @@
        "4"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1705,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 87,
    "metadata": {
     "collapsed": true
    },
@@ -1718,7 +1759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1727,7 +1768,7 @@
        "2"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1738,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1747,7 +1788,7 @@
        "[0, 7, 4, 11]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
