igraph built from 4 example files, using read_csv

--- a/cyjs-jupyter/cyjs.ipynb
+++ b/cyjs-jupyter/cyjs.ipynb
@@ -2,14 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/paul/anaconda/lib/python3.5/site-packages/numexpr/cpuinfo.py:76: UserWarning: [Errno 2] No such file or directory: 'sysctl'\n",
+      "  stacklevel=stacklevel + 1):\n"
+     ]
+    }
+   ],
    "source": [
-    "import cyjs\n",
-    "from IPython.display import display, HTML"
+    "from cyjs import *\n",
+    "from IPython.display import display, HTML\n",
+    "from pandas import *"
    ]
   },
   {
@@ -44,24 +52,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "cy = cyjs.cyjs()"
+    "from igraph import *\n",
+    "nodeFile = \"nodes.tsv\"\n",
+    "edgeFile = \"edges.tsv\"\n",
+    "nodeAttributesFile = \"geneExpression.tsv\"\n",
+    "edgeAttributesFile = \"edgeFlux.tsv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tblNodes = read_csv(nodeFile, sep=\"\\t\")\n",
+    "tblEdges = read_csv(edgeFile, sep=\"\\t\")\n",
+    "tblGeneExpression = read_csv(nodeAttributesFile, sep=\"\\t\")\n",
+    "tblEdgeFlux = read_csv(edgeAttributesFile, sep=\"\\t\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodeNames = tblNodes['name'].tolist()\n",
+    "nodeTypes = tblNodes['type'].tolist()\n",
+    "g = Graph(directed=True)\n",
+    "g.add_vertices(nodeNames)\n",
+    "g.vs['type'] = nodeTypes\n",
+    "sources = tblEdges['source'].tolist()\n",
+    "targets = tblEdges['target'].tolist()\n",
+    "edgeTypes = tblEdges['edgeType'].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g.add_edges(zip(tblEdges['source'].tolist(), tblEdges['target'].tolist()))\n",
+    "g.es['edgeType'] = edgeTypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "71e239f272a94ea186424295d4cfc714"
+       "model_id": "401446b27c4445e6be20e410657e6f72"
       }
      },
      "metadata": {},
@@ -69,64 +119,13 @@
     }
    ],
    "source": [
+    "cy = cyjs()\n",
     "display(cy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from igraph import *\n",
-    "\n",
-    "networkFile = \"toyNetwork2.tsv\"\n",
-    "nodeAttributesFile = \"type.noa\"\n",
-    "lines = open(networkFile).readlines()\n",
-    "tbl_rel = []\n",
-    "for line in lines:\n",
-    "   tokens = line.rstrip(\"\\n\").split(\"\\t\")\n",
-    "   tokens = [x.strip() for x in tokens]\n",
-    "   if(len(tokens) == 3):\n",
-    "      tbl_rel.append(tokens)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "lines = open(nodeAttributesFile).readlines()\n",
-    "\n",
-    "nodeTypes=[]\n",
-    "for line in lines:\n",
-    "   (node, type) = line.rstrip(\"\\n\").split(\"\\t\")\n",
-    "   nodeTypes.append([node, type])\n",
-    "\n",
-    "g = Graph(directed=True)\n",
-    "nodeNames = [x[0] for x in nodeTypes]\n",
-    "nodeTypeValues = [x[1] for x in nodeTypes]\n",
-    "\n",
-    "g.add_vertices(nodeNames)\n",
-    "g.vs['type'] = nodeTypeValues\n",
-    "\n",
-    "for row in tbl_rel:\n",
-    "  source = row[0];\n",
-    "  target = row[1];\n",
-    "  #print(\"adding edge, %s -> %s\" % (source, target))\n",
-    "  g.add_edge(source, target)\n",
-    "\n",
-    "g.es['edgeType'] = [x[2] for x in tbl_rel]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 59,
    "metadata": {
     "collapsed": true
    },
@@ -142,13 +141,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "cy.setHeight(1500)"
+    "cy.setHeight(500)"
    ]
   },
   {
@@ -158,7 +157,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from pandas import *\n",
+    "tbl_edgeFlux = read_csv('flux.tsv', sep='\\t', header=0)"
+   ]
   }
  ],
  "metadata": {
