--- a/cyjs-jupyter/cyjs.ipynb
+++ b/cyjs-jupyter/cyjs.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/paul/anaconda/lib/python3.5/site-packages/numexpr/cpuinfo.py:76: UserWarning: [Errno 2] No such file or directory: 'sysctl'\n",
-      "  stacklevel=stacklevel + 1):\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from cyjs import *\n",
     "from IPython.display import display, HTML\n",
@@ -52,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -67,8 +58,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tblNodes = read_csv(nodeFile, sep=\"\\t\")\n",
@@ -79,8 +72,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nodeNames = tblNodes['name'].tolist()\n",
@@ -95,8 +90,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "g.add_edges(zip(tblEdges['source'].tolist(), tblEdges['target'].tolist()))\n",
@@ -105,13 +102,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "401446b27c4445e6be20e410657e6f72"
+       "model_id": "fdcd99cb4acc4870b3ac8943c19bf36c"
       }
      },
      "metadata": {},
@@ -125,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -141,13 +138,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "cy.setHeight(500)"
+    "cy.setHeight(800)"
    ]
   },
   {
@@ -157,10 +154,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "from pandas import *\n",
-    "tbl_edgeFlux = read_csv('flux.tsv', sep='\\t', header=0)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
