basic example moved to examples/smallNetwork

--- a/cyjs-jupyter/examples/smallNetwork/smallNetwork.ipynb
+++ b/cyjs-jupyter/examples/smallNetwork/smallNetwork.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/paul/anaconda/lib/python3.5/site-packages/numexpr/cpuinfo.py:76: UserWarning: [Errno 2] No such file or directory: 'sysctl'\n",
-      "  stacklevel=stacklevel + 1):\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from cyjs import *\n",
     "from IPython.display import display, HTML\n",
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -67,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -81,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -99,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -111,13 +102,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b8c6f8bb82984990a5a278010e8aaf74"
+       "model_id": "1e03aed71f29422e9c30717d3a7a7cbd"
       }
      },
      "metadata": {},
@@ -131,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -146,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -157,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -171,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -182,8 +173,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cy.setEdgeAttributes(g, \"flux\", sourceNodes, targetNodes, edgeTypes, values)"
@@ -191,8 +184,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cy.setNodeAttributes(g, \"expression\", tblGeneExpression[\"name\"].tolist(), tblGeneExpression[\"expression\"].tolist())"
