now loops over edge flux, 3 conditions

--- a/cyjs-jupyter/examples/smallNetwork/smallNetwork.ipynb
+++ b/cyjs-jupyter/examples/smallNetwork/smallNetwork.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -102,13 +102,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e03aed71f29422e9c30717d3a7a7cbd"
+       "model_id": "bbc17c629319464aad0409edb45eaeae"
       }
      },
      "metadata": {},
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -156,13 +156,12 @@
    "source": [
     "sourceNodes = tblEdgeFlux[\"source\"].tolist()\n",
     "targetNodes = tblEdgeFlux[\"target\"].tolist()\n",
-    "edgeTypes = tblEdgeFlux[\"edgeType\"].tolist()\n",
-    "values = tblEdgeFlux[\"cond3\"].tolist()"
+    "edgeTypes = tblEdgeFlux[\"edgeType\"].tolist()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -173,18 +172,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "cy.setEdgeAttributes(g, \"flux\", sourceNodes, targetNodes, edgeTypes, values)"
+    "for condition in [\"cond1\", \"cond2\", \"cond3\"]:\n",
+    "   values = tblEdgeFlux[condition].tolist()\n",
+    "   cy.setEdgeAttributes(g, \"flux\", sourceNodes, targetNodes, edgeTypes, values)\n",
+    "   time.sleep(2)                        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
