nbextension now installed in user space

--- a/cyjs-jupyter/examples/smallNetwork/smallNetwork.ipynb
+++ b/cyjs-jupyter/examples/smallNetwork/smallNetwork.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/paul/anaconda/lib/python3.5/site-packages/numexpr/cpuinfo.py:76: UserWarning: [Errno 2] No such file or directory: 'sysctl'\n",
+      "  stacklevel=stacklevel + 1):\n"
+     ]
+    }
+   ],
    "source": [
     "from cyjs import *\n",
     "from IPython.display import display, HTML\n",
@@ -108,7 +117,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bbc17c629319464aad0409edb45eaeae"
+       "model_id": "3096eabdce93464ba279809d93563623"
       }
      },
      "metadata": {},
@@ -122,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -137,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -148,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -156,12 +165,12 @@
    "source": [
     "sourceNodes = tblEdgeFlux[\"source\"].tolist()\n",
     "targetNodes = tblEdgeFlux[\"target\"].tolist()\n",
-    "edgeTypes = tblEdgeFlux[\"edgeType\"].tolist()\n"
+    "edgeTypes = tblEdgeFlux[\"edgeType\"].tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -172,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -186,23 +195,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "cy.setNodeAttributes(g, \"expression\", tblGeneExpression[\"name\"].tolist(), tblGeneExpression[\"expression\"].tolist())"
+    "nodes = tblGeneExpression[\"name\"].tolist()\n",
+    "values = tblGeneExpression[\"expression\"].tolist()\n",
+    "cy.setNodeAttributes(g, \"expression\", nodes, values)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
